# budgetBackend

./: Dockerfile  README.md  alembic.ini  docker-compose.yml  exception_handlers.py  main.py  mypy.ini  pylintrc  pyproject.toml
.github/workflows/: actions.yml
config/: .env.example  auth.py  database.py  oauth2.py
database/: base.py  setup.py
dependencies/auth/: creators.py  permissions.py
dependencies/category/: creators.py  permissions.py
dependencies/common/: enums.py  getters.py
dependencies/subject/: dependencies.py  permissions.py
dependencies/transaction/: creators.py  permissions.py
dependencies/user/: creators.py  permissions.py
dependencies/wallet/: creators.py  permissions.py
docker/: docker-compose.yml
migrations/: env.py
migrations/versions/: 0a763486c5a4_add_user_is_admin_field.py  45a18717465a_connect_transactions_with_user_and_.py  48c57f973e94_change_constraint_value.py  613067282ac7_initial_migration.py  7486967a48ab_add_user_id_to_subject_model.py  7789bd1ebb7c_add_user_id_to_subject_model.py  84d976747ee1_add_transfer_option_to_transaction.py  aba8d7f50db8_add_category_transaction_connection.py  da8e894532e3_connect_transactions_with_subject.py
modules/auth/: dependencies.py  exceptions.py  schemas.py  services.py
modules/category/: dependencies.py  enums.py  interfaces.py  models.py  repositories.py  schemas.py  services.py  validators.py
modules/common/: exceptions.py  utils.py
modules/subject/: dependencies.py  interfaces.py  models.py  (+4 more)
src/: exception_handlers.py  main.py
tests/: conftest.py  database.py
(+223 files in other folders)
