[tool.poetry]
name = "budgetbackend"
version = "0.1.0"
description = ""
authors = ["Bartosz Michalski <bartosz.michalski777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0.post1"
aiomysql = "^0.2.0"
cryptography = "^41.0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
