[tool.poetry]
name = "budgetbackend"
version = "0.1.0"
description = ""
authors = ["Bartosz Michalski <bartosz.michalski777@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.5"
fastapi = "^0.104.1"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
uvicorn = "^0.24.0.post1"
aiomysql = "^0.2.0"
cryptography = "^41.0.7"
mypy = "^1.7.1"
pylint = "^3.0.3"
passlib = "^1.7.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
bcrypt = "^4.1.1"
pytest-asyncio = "^0.23.2"
httpx = "^0.25.2"
alembic = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
